--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1841,3 +1841,11 @@ a:hover .recuadro{ color:white; background: rgba(255, 255, 255, 0.25); }
 		z-index: 9999;
 		background: white;
 	}
+
+	footer{
+		border-top: 1px solid #898989;
+		padding-top: 30px;
+		padding-bottom: 30px;
+		font-size: 16px;
+		letter-spacing: 2px;
+	}
