--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1842,7 +1842,7 @@ a:hover .recuadro{ color:white; background: rgba(255, 255, 255, 0.25); }
 		background: white;
 	}
 
-	footer{
+	#main-footer{
 		border-top: 1px solid #898989;
 		padding-top: 30px;
 		padding-bottom: 30px;
