--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1779,11 +1779,11 @@ a:hover .recuadro{ color:white; background: rgba(255, 255, 255, 0.25); }
 	padding: 20px 20px;
 }
 
-.portafolio #main-wrapper{
+.portafolio #main-wrapper, .blog #main-wrapper{
 	padding-top: 5em;
 }
 
-.portafolio nav{
+.portafolio nav, .blog nav{
 	position: absolute;
 	background: #efefef;
 	top: -30px;
@@ -1797,7 +1797,7 @@ a:hover .recuadro{ color:white; background: rgba(255, 255, 255, 0.25); }
 	border-bottom: 1px solid #40423d;
 }
 
-.portafolio nav a{
+.portafolio nav a, .blog nav a{
 	color: black !important;
 	font-weight: 100;
 }
