--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1533,6 +1533,41 @@ ol.default li {
 }
 
 /*TEST*/
+
+.scroll-downs {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 100px;
+  left: 0;
+  margin: auto;
+
+  width :34px;
+  height: 55px;
+}
+.mousey {
+	width: 3px;
+	padding: 10px 12px;
+	height: 45px;
+	border: 2px solid #fff;
+	border-radius: 25px;
+	opacity: 0.75;
+}
+.scroller {
+  width: 3px;
+  height: 10px;
+  border-radius: 25%;
+  background-color: #fff;
+  animation-name: scroll;
+  animation-duration: 2.2s;
+  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
+  animation-iteration-count: infinite;
+}
+@keyframes scroll {
+  0% { opacity: 0; }
+  10% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(15px); opacity: 0;}
+}
 /* HIGHLIGHT */
 .highlight .button {
 	font-family: "Nexa Light" !important;
