--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1534,41 +1534,47 @@ ol.default li {
 
 /*TEST*/
 
-.scroll-downs {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 100px;
-  left: 0;
-  margin: auto;
+.scroll-down {
+	position: absolute;
+	left: 50%;
+	bottom: 150px;
+	display: block;
+	text-align: center;
+	font-size: 20px;
+	z-index: 100;
+	text-decoration: none;
+	text-shadow: 0;
+  width: 20px;
+  height: 20px;
+  border-bottom: 2px solid #fff;
+  border-right: 2px solid #fff;
+  z-index: 9;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%) rotate(45deg);
+  -moz-transform: translate(-50%, 0%) rotate(45deg);
+  transform: translate(-50%, 0%) rotate(45deg);
+	-webkit-animation: fade_move_down 4s ease-in-out infinite;
+	-moz-animation:    fade_move_down 4s ease-in-out infinite;
+	animation:         fade_move_down 4s ease-in-out infinite;
+}
 
-  width :34px;
-  height: 55px;
+
+/*animated scroll arrow animation*/
+@-webkit-keyframes fade_move_down {
+  0%   { -webkit-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,10px) rotate(45deg); opacity: 0; }
 }
-.mousey {
-	width: 3px;
-	padding: 10px 12px;
-	height: 45px;
-	border: 2px solid #fff;
-	border-radius: 25px;
-	opacity: 0.75;
+@-moz-keyframes fade_move_down {
+  0%   { -moz-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -moz-transform:translate(0,10px) rotate(45deg); opacity: 0; }
 }
-.scroller {
-  width: 3px;
-  height: 10px;
-  border-radius: 25%;
-  background-color: #fff;
-  animation-name: scroll;
-  animation-duration: 2.2s;
-  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
-  animation-iteration-count: infinite;
-}
-@keyframes scroll {
-  0% { opacity: 0; }
-  10% { transform: translateY(0); opacity: 1; }
-  100% { transform: translateY(15px); opacity: 0;}
-}
-/* HIGHLIGHT */
+@keyframes fade_move_down {
+  0%   { transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { transform:translate(0,10px) rotate(45deg); opacity: 0; }
+}/* HIGHLIGHT */
 .highlight .button {
 	font-family: "Nexa Light" !important;
 	display: inline-block;
@@ -1930,9 +1936,10 @@ a:hover .recuadro{ color:white; background: rgba(255, 255, 255, 0.25); }
 .horizontal-card div.card-img {
     border-radius: .25rem .25rem 0 0;
     width: 100%;
-    height: 340px;
-    background-size: auto 125%;
-    background-position: center;
+    height: 52vw;
+    background-size: 100%;
+    background-position: top;
+    background-repeat: no-repeat;
 }
 /*BOOTSTRAP XS*/
 
@@ -2277,7 +2284,7 @@ section.event{
 	.horizontal-card div.card-img {
 	    border-radius: .25rem .25rem 0 0;
 	    width: 50%;
-	    height: 340px;
+	    height: 250px;
 	    float: left;
 	    background-size: auto 100%;
 	    background-position: center;
